--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: Test, Build, and Deploy Backend & Frontend
 
-# Trigger on push to the branch that initiates deployment ad
+# Trigger on push to the branch that initiates deployment
 on:
   push:
     branches:
