--- a/.github/workflows/evaluate-model.yml
+++ b/.github/workflows/evaluate-model.yml
@@ -89,9 +89,11 @@ jobs:
           # load credentials
           sender   = os.environ["EMAIL_SENDER"]
           password = os.environ["EMAIL_PASSWORD"]
-          receiver = os.environ["EMAIL_RECEIVER"]
-          print(receiver)
-    
+          receiver = os.environ["EMAIL_RECEIVER"].strip()
+
+          if not receiver:
+            raise ValueError("EMAIL_RECEIVER environment variable is empty")
+
           # load your eval output
           with open("eval_output.json") as f:
               data = json.load(f)
@@ -116,9 +118,12 @@ jobs:
           msg["To"]      = receiver
           msg["Subject"] = subject
           msg.attach(MIMEText(body, "plain"))
-    
+
+          print(f"Sending email from {sender} to {receiver}")
+
           # send via Gmail SMTP
           with smtplib.SMTP_SSL("smtp.gmail.com", 465) as server:
-              server.login(sender, password)
-              server.send_message(msg)
+            server.login(sender, password)
+            # Use sendmail with explicit parameters instead of send_message
+            server.sendmail(sender, receiver, msg.as_string())
           EOF
