--- a/.github/workflows/evaluate-model.yml
+++ b/.github/workflows/evaluate-model.yml
@@ -76,8 +76,8 @@ jobs:
           # export for the if‑condition below
           echo "accuracy=$accuracy" >> $GITHUB_OUTPUT
     
-      - name: Notify via Email if Accuracy < 0.95
-        if: ${{ steps.eval.outputs.accuracy < 0.95 }}
+      - name: Notify via Email if Accuracy < 95
+        if: ${{ steps.eval.outputs.accuracy < 95 }}
         env:
           EMAIL_SENDER:   ${{ secrets.EMAIL_SENDER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
@@ -107,7 +107,7 @@ jobs:
     
           The latest model evaluation shows accuracy dropped below 99%.
     
-          Current Accuracy: {accuracy:.2%}
+          Current Accuracy: {accuracy:.2f}%
     
           Please investigate and retrain if necessary.
     
